# FnAudit

./: .gitignore  .recent_dbs.txt  1.csv  2.csv  3.csv  CMakeLists.txt  FnAudit.desktop  GEMINI.md  INSTALL_LINUX.md  QWEN.md  README.md  explanation_regex_name_retrieval.md  imgui.ini  install.sh  int_to_string_example.cpp  uninstall.sh  платежки 2024г.tsv
.qwen/: settings.json
src/: AboutDialog.h  BasePaymentDocument.h  Contract.h  Counterparty.h  CustomWidgets.cpp  CustomWidgets.h  DatabaseManager.cpp  DatabaseManager.h  ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  Invoice.h  Kosgu.h  Payment.h  PaymentDetail.h  PdfReporter.cpp  PdfReporter.h  Regex.h  Settings.h  SuspiciousWord.h  UIManager.cpp  UIManager.h  main.cpp
src/views/: BasePaymentsView.cpp  BasePaymentsView.h  BaseView.h  ContractsView.cpp  ContractsView.h  CounterpartiesView.cpp  CounterpartiesView.h  ImportMapView.cpp  ImportMapView.h  InvoicesView.cpp  InvoicesView.h  JO4ImportMapView.cpp  JO4ImportMapView.h  KosguView.cpp  KosguView.h  PaymentsView.cpp  PaymentsView.h  ReconciliationView.cpp  ReconciliationView.h  RegexesView.cpp  RegexesView.h  SelectiveCleanView.cpp  SelectiveCleanView.h  ServiceView.cpp  ServiceView.h  SettingsView.cpp  SettingsView.h  SpecialQueryView.cpp  SpecialQueryView.h  SqlQueryView.cpp  SqlQueryView.h  SuspiciousWordsView.cpp  SuspiciousWordsView.h
